--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "axios": "^1.6.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "winston": "^3.17.0",
+        "winston-papertrail": "^1.0.5",
         "ws": "^8.14.2"
     },
     "devDependencies": {
