--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
     "name": "currency-exchange-monitor",
     "version": "1.0.0",
     "description": "Currency exchange rate monitoring service with WebSocket notifications",
-    "main": "src/server.js",
+    "main": "dist/server.js",
     "scripts": {
-        "start": "node src/server.js",
-        "dev": "nodemon src/server.js"
+        "start": "node dist/server.js",
+        "dev": "nodemon",
+        "build": "tsc",
+        "watch": "tsc -w"
     },
     "dependencies": {
         "axios": "^1.6.2",
@@ -16,6 +18,11 @@
         "ws": "^8.14.2"
     },
     "devDependencies": {
-        "nodemon": "^3.0.2"
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.10.0",
+        "@types/ws": "^8.5.10",
+        "nodemon": "^3.0.2",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.3.2"
     }
 }
