--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
         "axios": "^1.6.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
         "winston": "^3.17.0",
         "winston-papertrail": "^1.0.5",
         "ws": "^8.14.2"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.8",
         "@types/node": "^20.10.0",
         "@types/ws": "^8.5.10",
         "nodemon": "^3.0.2",
