--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
   currency-monitor:
+    container_name: currency-monitor-backend
     build: .
     ports:
       - "3000:3000"
@@ -10,7 +11,7 @@ services:
       - .env
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:3000"]
+      test: [ "CMD", "wget", "--spider", "http://localhost:3000" ]
       interval: 30s
       timeout: 10s
-      retries: 3 
+      retries: 3
